--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ P{
 }
 .half-width img{
     width: 80%;
-    padding-top: 50PX;
+    margin-top: 50PX;
     background-image: url("images/shapes/Group\ 8448.png");
 }
 .top-banner{
