--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ P{
 }
 .half-width img{
     width: 100%;
-    background-image: url("images/shapes/Group\ 8448.png");
+    background-image: url("images/shapes/Frame\ 58.jpg");
 }
 
 section{
-    height: 1000px;
+    height: 900px;
     padding-bottom : 150px;}    
 .link-button{
     text-decoration: none;
@@ -40,7 +40,11 @@ section{
 .main-area{
         background-image: url("images/shapes/Frame\ 58.jpg");
         background-repeat: no-repeat;
-        background-position: center;      
+        background-position: center;   
+.main-area img{
+    width: 100%;
+    background-image: url("images/ ");
+}           
 
 .single-experience{
     box-shadow: 10px 10px 40px gray;
