--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ P{
     margin-left: 4%;
     padding-left: 2%;
 }
-.half-width img{
+.main-area img{
     width: 100%;
     background-image: url("images/shapes/Frame\ 58.jpg");
 }
