--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ P{
 .main-area img{
     width: 100%;
     background-image: url("images/shapes/Frame\ 58.jpg");
+    padding-top: 20px;
 }
 
 section{
