--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section{
 .single-experience{
     box-shadow: 10px 10px 40px gray;
     border-radius: 5px;
-    height: 75%;
+    height: 100%;
     background-color: white;
 }   
 .Experience-area{
@@ -55,6 +55,11 @@ section{
     background-position:left;
 }
 #full-stack{
+   border-left: 7px solid;
+   border-image:linear-gradient(180deg,lightsalmon,tomato);   
+   border-image-slice: 1;
+}
+#Second-stack{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
    border-image-slice: 1;
