--- a/style.css
+++ b/style.css
@@ -46,13 +46,20 @@ section{
 .single-experience{
     box-shadow: 10px 10px 40px gray;
     border-radius: 5px;
-    height: 100%;
+    height: 80%;
     background-color: white;
 }   
 .Experience-area{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position:left;
+}
+.Third-width{
+    height: 200px;
+    width: 20%;
+    float: left; 
+    margin-left: 4%;
+    padding-left: 2%;
 }
 #full-stack{
    border-left: 7px solid;
