changes are all needed

--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ section{
     background-position:left;
 }
 .Third-width{
-    height: 200px;
-    width: 20%;
+    height: 250px;
+    width: 100px;
     float: left; 
     margin-left: 4%;
     padding-left: 2%;
