--- a/style.css
+++ b/style.css
@@ -65,17 +65,21 @@ section{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
    border-image-slice: 1;
+   background-image: url(images/food/Project\ Cover.jpg);
 }
 #second-stack{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
    border-image-slice: 1;
+   background-image: url(images/food/Project\ Cover.png);
+
 }
 
 #baby-web{
     border-left: 7px solid;
     border-image:linear-gradient(180deg,blue,cyan);
     border-image-slice: 1;
+    background-image: url(images/food/Project\ Cover1.jpg);
 }
 footer p{
     text-align: center;
