all changes are needed to acceptation

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body{
     margin: 0;
     font-family:'poppins',sans-serif;
 }
+section{
+    height: 650px;
+    padding-bottom : 150px;
+}
+
 h1{font-size:50px;
 }
 h2{font-size: 40;}   
@@ -25,10 +30,10 @@ P{
     background-image: url("images/shapes/Frame\ 58.jpg");
     padding-top: 20px;
 }
-
-section{
-    height: 850px;
-    padding-bottom : 150px;}    
+.second-width img{
+    width: 70%;        
+}
+  
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(45deg,lightsalmon,tomato);
@@ -81,10 +86,10 @@ section{
     border-image-slice: 1;
     background-image: url(images/food/Project\ Cover1.jpg);
 }
-.single-experience img{
+.third-width img{
     width:30%;
-    padding: 4px;
-    padding-bottom: 70px;
+    margin: 6px;
+    margin-bottom: 70px;
 }
 footer p{
     text-align: center;
