--- a/style.css
+++ b/style.css
@@ -67,13 +67,13 @@ P{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
    border-image-slice: 1;
-   background-image: url(images/food/Project\ Cover.jpg);
+   background-image: url(images/food/Project\ Cover1.jpg);
 }
 #second-stack{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
    border-image-slice: 1;
-   background-image: url(images/food/Project\ Cover.png);
+   background-image: url(images/food/Project\ Cover1.png-1.png);
 
 }
 
@@ -81,7 +81,7 @@ P{
     border-left: 7px solid;
     border-image:linear-gradient(180deg,blue,cyan);
     border-image-slice: 1;
-    background-image: url(images/food/Project\ Cover1.jpg);
+    background-image: url(images/food/Project\ Cover5.png-1.png);
 }
 
 footer p{
