Changes are needed

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ P{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
    border-image-slice: 1;
-   background-image: url(images/food/Project\ Cover1.jpg);
+   background-image: url(images/food/Project\ Cover.png-1.png);
 }
 #second-stack{
    border-left: 7px solid;
