all changes are are needed

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ P{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position:left;
-    text-align: end;
+    text-align: bottom;
 }
 .third-width{
     height: 600px;
