Changes need allow

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ P{
 .Experience-area{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
-    background-position:left;
+    background-position:right;
    
 }
 .third-width{
