changes are needed

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ P{
     width: 350px;
     float: left; 
     margin-left: 4%;
-    padding-left: 2%;
+    padding: 2%;
     text-align:center;
     text-justify: auto;
 }
