--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ P{
     height: 600px;
     width: 350px;
     float: left; 
-    margin-left: 4%;
+    margin: 4%;
     padding: 2%;
     text-align:center;
     text-justify: auto;
