changes are needed

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ P{
     text-align:center;
     text-justify: auto;
     padding-bottom: 6%;
-    margin-top: 8%;
+    padding-top: 8%;
 }
 #full-stack{
    border-left: 7px solid;
