all type changes are needed

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ P{
     border-image:linear-gradient(180deg,blue,cyan);
     border-image-slice: 1;
 }
-.fourth-width{
+.More about us{
     padding-top: 4%;
 }
 
