--- a/style.css
+++ b/style.css
@@ -65,13 +65,10 @@ P{
     height: 500px;
     width: 350px;
     float: left; 
-    margin: 2%;
+    margin: 4%;
     text-align:center;
-  
-    padding-top: 2%;
-    padding-bottom: 4%;
-
-}
+    padding: 2%;
+}    
 #full-stack{
    border-left: 7px solid;
    border-image:linear-gradient(180deg,lightsalmon,tomato);   
