--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ P{
     background-color: aliceblue;
 }
 
+.fourth-width img{
+    width: 30%;
+}
+
 #big-web{
     border: 7px solid;
     border-image:linear-gradient(180deg,blue,cyan,orange);
