--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ P{
 }
 .main-area img{
     width: 60%;
-    background-image: url("images/shapes/Frame\ 58.jpg");
     padding-top: 30px;
 }
 
@@ -43,7 +42,8 @@ P{
 .main-area{
         background-image: url("images/shapes/Frame\ 58.jpg");
         background-repeat: no-repeat;
-        background-position: right;   
+        background-position: right; 
+        height: 350px;  
 }
 
 .single-experience{
@@ -60,12 +60,10 @@ P{
 }
 
 
-.my-recipies
-
 .third-width{
     height: 500px;
     width: 300px;
-    float: left; 
+    float: center; 
     margin: 2%;
     text-align:center;
     text-justify: auto;
@@ -91,7 +89,7 @@ P{
 .fourth-width{
     height: 250px;
     width: 900px;
-    float: left; 
+    float: center; 
     margin: 4%;
     text-align:center;
     text-justify: auto;
