--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ P{
 
 .single-experience{
     box-shadow: 10px 10px 40px gray;
-    border-radius: 10px;
-    height: 400%;
+    border-radius: 20px;
+    height: 300%;
     background-color: white;
 }   
 .Experience-area{
@@ -63,8 +63,8 @@ P{
 
 
 .third-width{
-    height: 550px;
-    width: 300px;
+    height: 450px;
+    width: 200px;
     float: center; 
     margin: 2%;
     text-align:center;
@@ -89,10 +89,10 @@ P{
 }
 
 .fourth-width{
-    height: 300px;
-    width: 1250px;
-    float: left; 
-    margin: 6%;
+    height: 350px;
+    width: 1000px;
+    float: center; 
+    margin: 4%;
     text-align:center;
     text-justify: auto;
     padding: 2%;
