--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ P{
 .single-experience{
     box-shadow: 10px 10px 40px gray;
     border-radius: 20px;
-    height: 500px;
-    width: 300px;
+    height: 300%;
+    
     background-color: white;
  }   
 
@@ -60,7 +60,7 @@ P{
 
 .third-width{
     height: 450px;
-    width: 200px;
+    width: 300px;
     float: left; 
     margin: 2%;
     text-align:center;
