--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ P{
 .my recipy
 .single-experience{
     box-shadow: 10px 10px 40px gray;
-    border-radius: 20px;
+    border-radius: 10px;
     height: 300%;
-    
     background-color: white;
+    border-color: blue;
  }   
 
 
