--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body{
     font-family:'poppins',sans-serif;
 }
 section{
-    height: 750px;
+    height: 650px;
     padding-bottom :150px;
+    padding-right: 100px;
 }
 
 h1{font-size:50px;
@@ -26,7 +27,7 @@ P{
     padding-left: 2%;
 }
 .half-width img{
-    width:80%;
+    width:60%;
 
 }
 
