--- a/style.css
+++ b/style.css
@@ -26,12 +26,16 @@ P{
     margin-left: 4%;
     padding-left: 2%;
 }
+.half-width img{
+    width: 70%;
+    padding-top: 20px;
+}
 
 
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(45deg,lightsalmon,tomato);
-    padding:20px 30px;
+    padding:15px 30px;
     border-radius: 20px;
     color: white;
     font-weight: 700;
@@ -44,8 +48,8 @@ P{
       
 }
 .main-area img{
-    width: 70%;
-    padding-top: 20px;
+    width: 80%;
+    padding-top: 30px;
 }
 
 
