--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body{
     font-family:'poppins',sans-serif;
 }
 section{
-    height: 650px;
+    height: 550px;
     padding-bottom :150px;
-  
+    padding-top: 150px;
 }
 
 h1{font-size:50px;
@@ -65,10 +65,10 @@ P{
 
 
 .third-width{
-    height: 450px;
+    height: 500px;
     width: 300px;
     float: left; 
-    margin: 2%;
+    margin:4%;
     text-align:center;
     text-justify: auto;
     padding: 2%;
