--- a/style.css
+++ b/style.css
@@ -68,10 +68,12 @@ P{
     height: 500px;
     width: 300px;
     float: left; 
-    margin:4%;
+    margin:2%;
     text-align:center;
     text-justify: auto;
     padding: 2%;
+    margin-left: 4%;
+
 }    
 #full-stack{
    border-left: 7px solid;
@@ -92,9 +94,9 @@ P{
 
 .fourth-width{
     height: 350px;
-    width: 1000px;
+    width: 1200px;
     float: left; 
-    margin: 4%;
+    margin: 8%;
     text-align:center;
     text-justify: auto;
     padding: 2%;
@@ -102,7 +104,7 @@ P{
 }
 
 .fourth-width img{
-    width: 20%;
+    width: 30%;
     padding-bottom: 2%;
     margin: 4%;
     
@@ -114,7 +116,16 @@ P{
     border-image-slice: 1;
 }
 
-footer p{
+.footer{
+    height: 250px;
+    width: auto;
+    float: left; 
+    margin: 4%;
+    text-align:center;
+    text-justify: auto;
+    padding: 2%;
+    background-color: blue;
+
     text-align: center;
     font-size: 13px;
 }
