--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 section{
     height: 550px;
     padding-bottom :150px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 h1{font-size:50px;
@@ -117,16 +117,16 @@ P{
 }
 
 .footer{
-    height: 250px;
+    height: 200px;
+    width: 1300px;
     float: left; 
-    margin: 4%;
     text-align:center;
     text-justify: auto;
     padding: 2%;
     background-color: blue;
 
-    text-align: center;
-    font-size: 13px;
+    text-align: ;
+    font-size: ;
 }
 
 
