--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body{
     font-family:'poppins',sans-serif;
 }
 section{
-    height: 550px;
+    height: 500px;
     padding-bottom :150px;
-    padding-top: 50px;
+    padding-top: 30px;
 }
 
 h1{font-size:50px;
@@ -94,7 +94,7 @@ P{
 
 .fourth-width{
     height: 350px;
-    width: 1000px;
+    width: 1100px;
     float: left; 
     margin: 8%;
     text-align:center;
@@ -118,15 +118,13 @@ P{
 
 .footer{
     height: 200px;
-    width: 1300px;
+    width: auto;
     float: left; 
     text-align:center;
     text-justify: auto;
     padding: 2%;
     background-color: blue;
 
-    text-align: ;
-    font-size: ;
 }
 
 
